EXODUS.PY: Add exomerge

--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -71,10 +71,12 @@ ASSERT_DEFINED(BUILD_SHARED_LIBS)
 IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
    IF (${PythonInterp_FIND_VERSION} VERSION_LESS "3.0")
       SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.in.py" )
-      MESSAGE(STATUS "A Python-2 version of Exodus.py will be installed.")
+      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge-2.py" )
+      MESSAGE(STATUS "A Python-2 version of exodus.py and exomerge.py will be installed.")
    ELSE()
       SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.in.py" )
-      MESSAGE(STATUS "A Python-3 version of Exodus.py will be installed.")
+      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge-3.py" )
+      MESSAGE(STATUS "A Python-3 version of exodus.py and exomerge.py will be installed.")
    ENDIF()
 
    IF (BUILD_SHARED_LIBS)
@@ -84,10 +86,11 @@ IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
 		@ONLY
 		)
       INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/exodus.py DESTINATION lib)
+      INSTALL(PROGRAMS ${EXOMERGE} DESTINATION lib RENAME exomerge.py)
    ELSE()
-      MESSAGE(STATUS "Exodus.py NOT installed since shared exodus library is not available.")
+      MESSAGE(STATUS "Exodus.py and exomerge.py NOT installed since shared exodus library is not available.")
    ENDIF()
 ELSE()
-      MESSAGE(STATUS "Exodus.py NOT installed since Exodus is not enabled.")
+      MESSAGE(STATUS "Exodus.py and exomerge.py NOT installed since Exodus is not enabled.")
 endif()
 
