EXODUS.PY: Change name to see if codacy has issues with - in names

--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -70,12 +70,12 @@ ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASExodus)
 ASSERT_DEFINED(BUILD_SHARED_LIBS)
 IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
    IF (${PythonInterp_FIND_VERSION} VERSION_LESS "3.0")
-      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.in.py" )
-      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge-2.py" )
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus_2.in.py" )
+      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge_2.py" )
       MESSAGE(STATUS "A Python-2 version of exodus.py and exomerge.py will be installed.")
    ELSE()
-      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.in.py" )
-      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge-3.py" )
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus_3.in.py" )
+      SET( EXOMERGE "${CMAKE_CURRENT_SOURCE_DIR}/exomerge_3.py" )
       MESSAGE(STATUS "A Python-3 version of exodus.py and exomerge.py will be installed.")
    ENDIF()
 
