--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,8 @@ environment:
       VCPKG_DEFAULT_TRIPLET: "x64-windows"
       VCPKG_BUILD_TYPE: "release"
       LIB_ROOT: C:\Tools\vcpkg\installed\%VCPKG_DEFAULT_TRIPLET%
-
+      MINGW_DIR: C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
+      
 platform:
     - x64
 
@@ -23,6 +24,9 @@ branches:
 # Do not build feature branch with open Pull Requests
 skip_branch_with_pr: true
 
+init:
+  - cmd: set PATH=%MINGW_DIR%;%PATH%
+  
 install:
   - cmd: set SRC_DIR=%cd%
   - cmd: set INSTALL_LOC=%SRC_DIR%\install
@@ -54,7 +58,7 @@ build_script:
      -DSEACASProj_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=ON ^
      -DSEACASProj_ENABLE_ALL_PACKAGES:BOOL=ON ^
      -DSEACASProj_ENABLE_DOXYGEN:BOOL=OFF ^
-     -DSEACASProj_ENABLE_Fortran=OFF ^
+     -DSEACASProj_ENABLE_Fortran=ON ^
      -DSEACASProj_ENABLE_SEACAS:BOOL=ON ^
      -DSEACASProj_ENABLE_SECONDARY_TESTED_CODE:BOOL=ON ^
      -DSEACASProj_ENABLE_TESTS=ON ^
