EXODUS: Initial output of assembly information; non-transient, no attributes

--- a/packages/seacas/libraries/exodus/test/CMakeLists.txt
+++ b/packages/seacas/libraries/exodus/test/CMakeLists.txt
@@ -102,6 +102,8 @@ IF ( NETCDF_NCDUMP_BINARY )
     testwt-compress
     testwt-results
     testwt-oned
+    testwt-assembly
+    testrd-assembly
   )
 
   IF (SEACASExodus_ENABLE_THREADSAFE)
