EXODUS: Refactor storage of assembly data to make it easier to add
The NetCDF assembly-related dims and vars now have the assembly id
as part of the name instead of an index.  This give benefits:
* Easier to add new assemblies since do not have to rewrite metadata
  such as ids[] and status[] and names[].
Disadvantage:
* Can not redefine the id of an assembly easily
* Different than other entity types (sets, blocks)

However, since assembly is different anyway, the advantages outweigh the
disadvantages hopefully.

--- a/packages/seacas/libraries/exodus/test/testall.in
+++ b/packages/seacas/libraries/exodus/test/testall.in
@@ -273,6 +273,13 @@ echo "begin testrd-assembly" >> test.output
 ${PREFIX} ${BINDIR}/testrd-assembly${SUFFIX} | grep -v version | ${DIFF} - ${SRCDIR}/testrd-assembly.dmp | tee testrd-assembly.res
 echo "end testrd-assembly" >> test.output
 
+echo "test-add-assembly - add an assembly to an existing file"
+echo "begin test-add-assembly" >> test.output
+${PREFIX} ${BINDIR}/test-add-assembly${SUFFIX} >> test.output
+# Filter out the "maximum_name_length" attribute. Moves around in ncdump output for nc4 vs nc3
+${NCDUMP} -d5,5 test-assembly.exo | grep -v version | grep -v _FillValue |grep -v "maximum_name_length" | ${DIFF} - ${SRCDIR}/test-add-assembly.dmp | tee test-add-assembly.res
+echo "end test-add-assembly" >> test.output
+
 echo "testwt-oned - write 1D mesh..."
 echo "begin testwt-oned" >> test.output
 ${PREFIX} ${BINDIR}/testwt-oned${SUFFIX} >> test.output
