--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ os:
   - linux
 
 arch:
+  - amd64
   - arm64
   - ppc64xle
-  - amd64
   
 compiler:
   - gcc
@@ -72,21 +72,7 @@ before_install:
 before_script:
 
 install:
-  ############################################################################
-  # Install a recent CMake
-  ############################################################################
-  - DEPS_DIR="${HOME}/deps"
-  - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.0-Linux-x86_64.tar.gz"
-      mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-    else
-      brew install cmake || brew upgrade cmake
-    fi
-  - cd -
+  - export PATH=/usr/local/cmake-3.12.4/bin:${PATH}
   - cmake --version
   - ./cmake-config
 
