--- a/.travis.yml
+++ b/.travis.yml
@@ -65,16 +65,17 @@ before_install:
        sudo apt-get -y install gfortran-7
        sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 90
     fi
+  - sudo apt-get -y install cmake
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
-  - PATH=/usr/local/bin:/usr/local/cmake-3.12.4/bin:${PATH} cmake --version
-  - PATH=/usr/local/bin:/usr/local/cmake-3.12.4/bin:${PATH} GNU_PARALLEL=OFF ./install-tpl.sh 
+  - cmake --version
+  - GNU_PARALLEL=OFF ./install-tpl.sh 
 
 before_script:
 
 install:
-  - PATH=/usr/local/bin:/usr/local/cmake-3.12.4/bin:${PATH} cmake --version
-  - PATH=/usr/local/bin:/usr/local/cmake-3.12.4/bin:${PATH} ./cmake-config
+  - cmake --version
+  - ./cmake-config
 
 script:
   - cd build
