EXODUS: More blob changes; test writing is working

--- a/packages/seacas/libraries/exodus/test/CMakeLists.txt
+++ b/packages/seacas/libraries/exodus/test/CMakeLists.txt
@@ -105,6 +105,7 @@ IF ( NETCDF_NCDUMP_BINARY )
     testwt-assembly
     testrd-assembly
     test-add-assembly
+    testwt-blob
   )
 
   IF (SEACASExodus_ENABLE_THREADSAFE)
