--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ matrix:
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=ON
     - compiler: gcc
       arch: ppc64xle
+      dist: bionic
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=ON
     - compiler: clang
       env: MPI=ON THREADSAFE=ON H5VERSION=V18 FORTRAN=OFF
