--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     - os: osx
   include:
     - compiler: clang
-      env: SANITIZER="-fsanitize=address -fsanitize-address-use-after-scope -fsanitize=memory -fno-omit-frame-pointer -fPIC" FORTRAN=OFF BUILD_TYPE=DEBUG CGNS=OFF FC=gfortran-6
+      env: SANITIZER="address -fsanitize-address-use-after-scope -fsanitize=memory -fno-omit-frame-pointer -fPIC" FORTRAN=OFF BUILD_TYPE=DEBUG CGNS=OFF FC=gfortran-6
     - compiler: gcc
       arch: amd64
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=ON
