--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,12 @@ matrix:
       env: SANITIZER="undefined" FORTRAN=OFF BUILD_TYPE=DEBUG CGNS=OFF FC=gfortran-6
     - compiler: gcc
       arch: amd64
+      env: MPI=ON H5VERSION=V18 USE_64BIT_INT=OFF
+    - compiler: gcc
+      arch: amd64
+      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF
+    - compiler: gcc
+      arch: amd64
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=ON
     - compiler: clang
       env: MPI=ON THREADSAFE=ON H5VERSION=V18 FORTRAN=OFF
