--- a/packages/seacas/libraries/ioss/src/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/CMakeLists.txt
@@ -14,7 +14,7 @@ ENDIF()
 IF (TPL_ENABLE_DataWarp)
   SET(SEACAS_HAVE_DATAWARP ON)
 ENDIF()
-  
+
 IF (${TPL_ENABLE_CGNS})
   SET(SEACAS_HAVE_CGNS ON)
 ENDIF()
@@ -51,6 +51,7 @@ ENDIF()
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR})
 APPEND_GLOB(HEADERS ${DIR}/Ioss_*.h)
 APPEND_GLOB(SOURCES ${DIR}/*.C)
+APPEND_GLOB(SOURCES ${DIR}/*.c)
 
 IF (NOT TPL_ENABLE_MPI)
   LIST(REMOVE_ITEM SOURCES ${DIR}/Ioss_Decomposition.C)
