--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -50,6 +50,16 @@ IF (${PROJECT_NAME}_ENABLE_SEACASEpu)
   INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/epup DESTINATION bin)
 ENDIF()
 
+ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASConjoin)
+IF (${PROJECT_NAME}_ENABLE_SEACASConjoin)
+  CONFIGURE_FILE(
+	${CMAKE_CURRENT_SOURCE_DIR}/pconjoin.in
+	${CMAKE_CURRENT_BINARY_DIR}/pconjoin
+	@ONLY
+	)
+  INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/pconjoin DESTINATION bin)
+ENDIF()
+
 INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_SOURCE_DIR}"
 )
