IOSS: Rename io_assembly -> io_modify

--- a/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
@@ -61,10 +61,10 @@ TRIBITS_ADD_EXECUTABLE(
   SOURCES io_info_main.C
   )
 TRIBITS_ADD_EXECUTABLE(
-  io_assembly
+  io_modify
   NOEXEPREFIX
   NOEXESUFFIX
-  SOURCES io_assembly.C assembly_interface.C
+  SOURCES io_modify.C modify_interface.C
   )
 TRIBITS_ADD_EXECUTABLE(
   sphgen
@@ -210,7 +210,7 @@ ENDIF()
 install_executable(io_shell)
 install_executable(shell_to_hex)
 install_executable(io_info)
-install_executable(io_assembly)
+install_executable(io_modify)
 install_executable(sphgen)
 install_executable(skinner)
 
