Use INSTALLABLE option

--- a/packages/seacas/applications/epu/CMakeLists.txt
+++ b/packages/seacas/applications/epu/CMakeLists.txt
@@ -27,8 +27,8 @@ IF(NOT __LINUX_COMPILER_PGI)
     NOEXEPREFIX
     NOEXESUFFIX
     SOURCES ${SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/epu.C
+    INSTALLABLE
     )
-  install_executable(epu)
 
 IF (TPL_ENABLE_MPI)
   TRIBITS_ADD_EXECUTABLE(
@@ -37,8 +37,8 @@ IF (TPL_ENABLE_MPI)
     NOEXESUFFIX
     SOURCES ${SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/pepu.C
     COMM mpi
+    INSTALLABLE
     )
-  install_executable(pepu)
 ENDIF()
 ENDIF()
 
