--- a/packages/seacas/libraries/ioss/src/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/CMakeLists.txt
@@ -43,8 +43,7 @@ IF (NOT ${PROJECT_NAME}_ENABLE_Zoltan)
   ADD_DEFINITIONS(-DNO_ZOLTAN_SUPPORT)
 ENDIF()
 
-IF (${PROJECT_NAME}_ENABLE_ParMETIS)
-ELSE()
+IF (NOT TPL_ENABLE_ParMETIS)
   ADD_DEFINITIONS(-DNO_PARMETIS_SUPPORT)
 ENDIF()
 
