EXODUS: Set c99 property for tests also [ci skip]

--- a/packages/seacas/libraries/exodus/test/CMakeLists.txt
+++ b/packages/seacas/libraries/exodus/test/CMakeLists.txt
@@ -143,6 +143,7 @@ IF ( NETCDF_NCDUMP_BINARY )
 
   FOREACH ( testName ${cbind_OLDTESTS} )
     TRIBITS_ADD_EXECUTABLE( ${testName} NOEXEPREFIX NOEXESUFFIX SOURCES ${testName}.c LINKER_LANGUAGE CXX)
+    set_property(TARGET ${testName} PROPERTY C_STANDARD 99)
   ENDFOREACH ( testName )
 
   TRIBITS_ADD_EXECUTABLE( testwt-localization NOEXEPREFIX NOEXESUFFIX SOURCES testwt-localization.C LINKER_LANGUAGE CXX)
