IOSS: Make blob test/example work in parallel

--- a/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
@@ -26,16 +26,13 @@ TRIBITS_ADD_EXECUTABLE(
  SOURCES Utst_blob_write_read.C
 )
 
-if (disabled_for_now)
-TRIBITS_ADD_ADVANCED_TEST(blob_write_read_example
-   TEST_0 EXEC Utst_blob_write_read
-     OUTPUT_FILE blob_write_read_example.txt
-     NUM_MPI_PROCS ${NPROCS}
-   TEST_1 CMND diff ARGS blob_write_read_example.txt ${CMAKE_CURRENT_SOURCE_DIR}/blob_write_read_example.gold.txt
-  COMM mpi serial
-  XHOSTTYPE Windows
+TRIBITS_ADD_TEST(
+        Utst_blob_write_read
+	NAME Utst_blob_write_read
+	NUM_MPI_PROCS ${NPROCS}
+	COMM mpi serial
+	XHOSTTYPE Windows
   )
-endif()
 
 TRIBITS_ADD_EXECUTABLE(
  Utst_sort
