IOSS: Add cgns assembly test

--- a/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
@@ -538,6 +538,49 @@ TRIBITS_ADD_ADVANCED_TEST(pamgen_to_unstructured_cgns
 ENDIF()
 endif()
 
+TRIBITS_ADD_ADVANCED_TEST(structured_cgns_assembly_copy
+   TEST_0 EXEC io_shell ARGS ${CMAKE_CURRENT_SOURCE_DIR}/test/assemblies.cgns assemblies-out.cgns
+     NUM_MPI_PROCS 1-4
+     NOEXEPREFIX NOEXESUFFIX
+   TEST_1 EXEC io_info ARGS ${CMAKE_CURRENT_SOURCE_DIR}/test/assemblies.cgns
+     OUTPUT_FILE gold.info.txt
+     NUM_MPI_PROCS 1
+     NOEXEPREFIX NOEXESUFFIX
+   TEST_2 EXEC io_info ARGS assemblies-out.cgns
+     OUTPUT_FILE created.info.txt
+     NUM_MPI_PROCS 1
+     NOEXEPREFIX NOEXESUFFIX
+   TEST_3 CMND grep ARGS -v Database gold.info.txt OUTPUT_FILE clean.gold.info.txt
+   TEST_4 CMND grep ARGS -v Database created.info.txt OUTPUT_FILE clean.created.info.txt
+   TEST_5 CMND diff ARGS clean.gold.info.txt clean.created.info.txt
+     NUM_MPI_PROCS 1
+  COMM mpi
+  )
+
+if (TPL_ENABLE_MPI)
+   TRIBITS_ADD_ADVANCED_TEST(structured_cgns_assembly_copy_fpp
+      TEST_0 EXEC io_shell ARGS --compose=external ${CMAKE_CURRENT_SOURCE_DIR}/test/assemblies.cgns assemblies-fpp-out.cgns
+        NUM_MPI_PROCS 1-4
+        NOEXEPREFIX NOEXESUFFIX
+      TEST_1 EXEC io_shell ARGS --external assemblies-fpp-out.cgns assemblies-fpp-join.cgns
+        NUM_MPI_PROCS 1-4
+        NOEXEPREFIX NOEXESUFFIX
+      TEST_2 EXEC io_info ARGS ${CMAKE_CURRENT_SOURCE_DIR}/test/assemblies.cgns
+        OUTPUT_FILE fpp-gold.info.txt
+        NUM_MPI_PROCS 1
+        NOEXEPREFIX NOEXESUFFIX
+      TEST_3 EXEC io_info ARGS assemblies-fpp-join.cgns
+        OUTPUT_FILE fpp-created.info.txt
+        NUM_MPI_PROCS 1
+        NOEXEPREFIX NOEXESUFFIX
+      TEST_4 CMND grep ARGS -v Database fpp-gold.info.txt OUTPUT_FILE clean.fpp-gold.info.txt
+      TEST_5 CMND grep ARGS -v Database fpp-created.info.txt OUTPUT_FILE clean.fpp-created.info.txt
+      TEST_6 CMND diff ARGS clean.fpp-gold.info.txt clean.fpp-created.info.txt
+        NUM_MPI_PROCS 1
+     COMM mpi
+     )
+endif(TPL_ENABLE_MPI)
+
 ENDIF(TPL_ENABLE_CGNS)
 
 IF (TPL_ENABLE_MPI AND ${PROJECT_NAME}_ENABLE_Zoltan)
