--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ before_install:
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
   - cmake --version
-  - GNU_PARALLEL=OFF ./install-tpl.sh  >& install-tpl.out
+  - travis_wait GNU_PARALLEL=OFF ./install-tpl.sh  >& install-tpl.out
 
 before_script:
 
