Another try at travis_wait

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ matrix:
     - compiler: clang
       env: APPLICATIONS=OFF LEGACY=OFF FORTRAN=OFF
 
-before_install: travis_wait 
+before_install: 
   # C++14
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
@@ -67,7 +67,7 @@ before_install: travis_wait
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
   - cmake --version
-  - GNU_PARALLEL=OFF ./install-tpl.sh  >& install-tpl.out
+  - GNU_PARALLEL=OFF travis_wait ./install-tpl.sh  >& install-tpl.out
 
 before_script:
 
