--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,8 @@ before_install:
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
   - cmake --version
-  - GNU_PARALLEL=OFF travis_wait ./install-tpl.sh  >& install-tpl.out
+  - GNU_PARALLEL=OFF CGNS=OFF NETCDF=OFF PNETCDF=OFF ./install-tpl.sh >& install-hdf5.out
+  - GNU_PARALLEL=OFF ./install-tpl.sh 
 
 before_script:
 
