--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,10 @@ matrix:
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=OFF
     - compiler: gcc
       arch: amd64
-      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF
+      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF USE_SZIP=YES USE_AEC=YES
+    - compiler: gcc
+      arch: amd64
+      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF USE_SZIP=YES 
     - compiler: gcc
       arch: amd64
       env: MPI=ON H5VERSION=V112 USE_64BIT_INT=ON
