--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_install:
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
   - cmake --version
-  - GNU_PARALLEL=OFF ./install-tpl.sh  > install-hdf5.out
+  - GNU_PARALLEL=OFF ./install-tpl.sh
 
 before_script:
 
