Another try at szip travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ matrix:
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=OFF
     - compiler: gcc
       arch: amd64
-      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF NEEDS_SZIP=YES USE_AEC=YES
+      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF NEEDS_SZIP=YES USE_AEC=YES VERBOSE=1
     - compiler: gcc
       arch: amd64
-      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF NEEDS_SZIP=YES 
+      env: MPI=ON H5VERSION=V110 USE_64BIT_INT=OFF NEEDS_SZIP=YES  VERBOSE=1
     - compiler: gcc
       arch: amd64
       env: MPI=ON H5VERSION=V112 USE_64BIT_INT=ON
