--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
       arch: amd64
       env: MPI=ON H5VERSION=V18 USE_64BIT_INT=ON
     - compiler: clang
-      env: MPI=ON THREADSAFE=ON H5VERSION=V18 FORTRAN=OFF  NEEDS_SZIP=YES
+      env: MPI=ON THREADSAFE=ON H5VERSION=V18 FORTRAN=OFF  NEEDS_SZIP=NO
     - compiler: gcc
       env: KOKKOS=ON
     - compiler: gcc
@@ -54,7 +54,7 @@ matrix:
     - compiler: gcc
       env: MPI=ON ADIOS2=ON
     - compiler: clang
-      env: APPLICATIONS=OFF LEGACY=OFF FORTRAN=OFF NEEDS_SZIP=YES
+      env: APPLICATIONS=OFF LEGACY=OFF FORTRAN=OFF NEEDS_SZIP=NO
 
 before_install: 
   # C++14
